workflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-n8n-http
  namespace: workflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3000"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: letsencrypt-cluster
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: skabrits.tplinkdns.com
    http:
      paths:
      - path: /n8n
        pathType: Prefix
        backend:
          service:
            name: workflow-n8n
            port:
              number: 80
  tls:
  - hosts:
    - skabrits.tplinkdns.com
    secretName: kubeflow-cert
